--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,12 +12,12 @@
 // $cyan: #00bcd4;
 // $white: #fff;
 $theme-colors: (
-  "primary": #6a82fb,
-  "secondary": #fc5c7d,
-  "success": #45b649,
+  "primary": #14548c,
+  "secondary": #d96704,
+  "success": #038c73,
   "danger": #f85032,
   "warning": #ffd700,
-  "info": #00c9ff
+  "info": #6992bc
 );
 
 $enable-gradients: true;
