Run prettier to get files on baseline

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -5,7 +5,7 @@
 
     &.active {
       color: #fff;
-      background: rgba(255, 255, 255, .23);
+      background: rgba(255, 255, 255, 0.23);
       opacity: 1;
     }
   }
